--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MST PORTFOLIO</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
 
     <!--- Box icons link -->
     <link rel="stylesheet"
@@ -13,12 +13,56 @@
     <!--- Remix icons link -->
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-    rel="stylesheet"/>
+    rel="stylesheet">
 
     <!-- Google Fonts link -->
-     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     
+
+    <!--header-->
+    <header>
+        <a href="#" class="logo">Developer <span>X.</span></a>
+
+        <div class="bx bx-menu" id="menu-icon"></div>
+
+        <ul class="navlist">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+
+        <div class="top-btnn">
+            <a href="#" class="h-btn">Contact me</a>
+        </div>
+    </header>
+
+    <!--hero-->
+    <section class="hero" id="home">
+        <div class="main-content">
+            <h4>Hi, There!</h4>
+            <h1>I'm <span>THIRILOCHAN KARTHI M S</span></h1>
+            <p>As a dedicated software and baeating efficient, scalable, and robust solkasjfaksjfasfklakdjasllllflkadfsksadfjdfsa</p>
+            <div class="social">
+                <a href="#"><i class="ri-instagram-fill"></i></a>
+                <a href="#"><i class="ri-facebook-box-line"></i></a>
+                <a href="#"><i class="ri-twitter-fill"></i></a>
+                <a href="#"><i class="ri-youtube-fill"></i></a>
+            </div>
+
+            <div class="main-btn">
+                <a href="#" class="btn">Hire me</a>
+                <a href="#" class="btn btn2">Download CV</a>
+            </div>
+        </div>
+
+    </section>
+    <!---js link-->
+    <script src="js/script.js"></script>
 </body>
 </html>
