--- a/index.html
+++ b/index.html
@@ -60,8 +60,53 @@
                 <a href="#" class="btn btn2">Download CV</a>
             </div>
         </div>
-
     </section>
+
+    <!---about-->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="assets/images/aboutimg.png">
+        </div>
+
+        <div class="about-text">
+            <h2>I am Software <span>Engineer</span> <br> & AI and ML Developer</h2>
+            <div class="exp-area">
+                <p class="exp">
+                    Experience:
+                    <span>1 year</span>
+                </p>
+
+                <p class="exp">
+                    Specialty:
+                    <span>Product Developer, Architect</span>
+                </p>
+
+                <p class="exp">
+                    Address:
+                    <span>No.14, K M Avenue, Nethaji Nagar, Kanchipuram</span>
+                </p>
+
+                <p class="exp">
+                    Email:
+                    <span>thirilochankarthi@gmail.com</span>
+                </p>
+
+                <p class="exp">
+                    Phone:
+                    <span>9043436428</span>
+                </p>
+
+                <p class="exp">
+                    Available for Freelance and Full-Time Positions
+                    <span> </span>
+                </p>
+
+            </div>
+            <a href="#" class="btn">View All Projects</a>            
+        </div>
+    </section>
+
+
     <!---js link-->
     <script src="js/script.js"></script>
 </body>
